tests/negative/QualSymNotInScope.mjuvix
module QualSymNotInScope;

  module M;
  axiom haha : Type;
  end;

  axiom test : M.hah;

end;
